--- a/javascript/random100.html
+++ b/javascript/random100.html
@@ -16,11 +16,11 @@
         alert("Bravo.");
         notFound = false;
       } else if (user >= randomNumb+10) {
-        alert("La useronse est beaucoup plus petite.");
+        alert("La reponse est beaucoup plus petite.");
       } else if (user <= randomNumb-10) {
-        alert("La useronse est beaucoup plus grande.");
+        alert("La reponse est beaucoup plus grande.");
       } else if (user > randomNumb) {
-        alert("La useronse est plus petite.");
+        alert("La reponse est plus petite.");
       } else if (user < randomNumb) {
         alert("La reponse est plus grande.");
       } else {
