--- a/html_css/defiairbnb/index.html
+++ b/html_css/defiairbnb/index.html
@@ -18,17 +18,41 @@
         <img src="airbnb.png"/>
     </div>
     <div class="background">
-
         <img src="sky.jpg"/>
-    </div>
-    <div class="textimg"/>
-      <h1>VIVEZ LÀ-BAS</h1>
-<p>Réservez des logements auprès d'hôtes locaux dans plus de 191 pays et vivez là-bas, comme chez vous.
-</p>
-    </div>
-    <div class="search">
+        
+        <div class="textimg"/>
+          <h1>VIVEZ LÀ-BAS</h1>
+    <p>Réservez des logements auprès d'hôtes locaux dans plus de 191 pays et vivez là-bas, comme chez vous.
+    </p>
+        </div>
+        <div class="search">
+          <div class="searchform">
+          <input type="text" name="nom" placeholder="Ou ?">
+          <input type="text" name="date" placeholder="Quand ?">
+          <select>
+            <option value="1">1 Voyageur</option>
+            <option value="2">2 Voyageurs</option>
+            <option value="3">3 Voyageurs</option>
+            <option value="4">4 Voyageurs</option>
+            <option value="5">5 Voyageur</option>
+            <option value="6">6 Voyageurs</option>
+            <option value="7">7 Voyageurs</option>
+            <option value="8">8 Voyageurs</option>
+          </select>
+          <button>Rechercher</button>
 
+        </div>
     </div>
+</div>
+<div class="article1">
+  <img src="https://a0.muscache.com/airbnb/static/homepages/host_banner/green-doors-da92547ad2e02558af61a61405d4a414.jpg"/>
+
+<div class="textarticle1">
+  <h3> Ouvrez la porte à un voyageur et à une nouvelle vie </h3>
+<p>Gagnez de l'argent en accueillant des voyageurs. </p>
+  <button> Estimer mes revenus</button>
+</div>
+</div>
 
   </body>
 </html>
