--- a/javascript/calculmental.html
+++ b/javascript/calculmental.html
@@ -8,7 +8,7 @@
     <script>
     var i = 0;
     while (i <= 2) {
-    var operator = ["+","/","-","*"];
+    var operator = ["+","-","*"];
     var user;
     var randomOp = operator[Math.floor((Math.random() * operator.length))];
     var randomOp2 = operator[Math.floor((Math.random() * operator.length))];
@@ -31,7 +31,7 @@
         var randomNumber1 = Math.floor((Math.random() * 10));
         var randomNumber2 = Math.floor((Math.random() * 10));
         var randomNumber3 = Math.floor((Math.random() * 10));
-        var user2 = prompt("Combien font" + " " + randomNumber1 + " " + randomOp + " " + randomNumber2 + randomOp2 + " " + randomNumber3 + "?");
+        var user2 = prompt("Combien font" + " " + randomNumber1 + " " + randomOp + " " + randomNumber2 + " " + randomOp2 + " " + randomNumber3 + "?");
         var result2 = eval(randomNumber1 +randomOp +randomNumber2 +randomOp2 +randomNumber3);
         if (result2 == user2) {
         alert("Vous avez gagné !");
