site presentation changement animation menu, formulaire java/html terminé

--- a/html_css/designsite/arkadelondon.html
+++ b/html_css/designsite/arkadelondon.html
@@ -31,22 +31,25 @@
     </ul>
 
 <div class="paraloco">
-<h1>Arkadelondon.com, audio reactive art... </h1>
-<h3>Aspect apprecié 1 </h3>
+<h1>Arkadelondon.com, audio reactive art</h1>
+<h3>Animation constante.contenu dynamique </h3>
 <div class="paraexpli">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula in enim a bibendum. Aenean condimentum et lectus non mattis.</p>
+<p>Contenu animé en continu, au passage de la souris le texte apparait scripté et au fur et à mesure forme une phrase.</p>
 </div>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=75&txt=800%C3%97400&w=800&h=400"/>
-<h3>Aspect apprecié 2 </h3>
+  <img id="imgpara" src="article2arkade.png"/>
+<h3>Thème en adequation avec l'utilité du site </h3>
 <div class="paraexpli">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula in enim a bibendum. Aenean condimentum et lectus non mattis.</p>
+<p> On reconnait bien des l'apparition du site qu'il est du domaine de la musique</p>
 </div>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=75&txt=800%C3%97400&w=800&h=400"/>
-<h3>Aspect apprecié 3 </h3>
+  <img id="imgpara" src="article1arkade.png"/>
+<h3> Mouvement en fonction du curseur </h3>
 <div class="paraexpli">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula in enim a bibendum. Aenean condimentum et lectus non mattis.</p>
+<p>Tout le site se déplace en fonctin de la position du curseur</p>
 </div>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=75&txt=800%C3%97400&w=800&h=400"/>
+  <img id="imgpara" src="article3arkade.png"/>
   </div>
+  <style>
+  
+  </style>
   </body>
 </html>
