--- a/html_css/designsite/locomotive.html
+++ b/html_css/designsite/locomotive.html
@@ -31,22 +31,23 @@
     </ul>
 
 <div class="paraloco">
-<h1>Locomotive.ca, Web design agency... </h1>
-<h3>Aspect apprecié 1 </h3>
+<h1>Locomotive.ca, agence de Web design</h1>
+<h3>Animation des images/menus. </h3>
 <div class="paraexpli">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula in enim a bibendum. Aenean condimentum et lectus non mattis.</p>
+<p>Les animations d'images sont des simples agrandissements avec des ombres. Pour ce qui est des menus, une sous ligne apparait au passage de la souris.
+la navigation sur le site est clair.</p>
 </div>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=75&txt=800%C3%97400&w=800&h=400"/>
-<h3>Aspect apprecié 2 </h3>
+  <img src="article1loco.png"/>
+<h3>Transition entres les pages, fluidité.</h3>
 <div class="paraexpli">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula in enim a bibendum. Aenean condimentum et lectus non mattis.</p>
+<p>Chaque transition de page se fait avec une animation qui englobe toute la page et cache le chargement de la page suivante.</p>
 </div>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=75&txt=800%C3%97400&w=800&h=400"/>
-<h3>Aspect apprecié 3 </h3>
+  <img src="articlel2loco.png"/>
+<h3>Sobre, clair. </h3>
 <div class="paraexpli">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula in enim a bibendum. Aenean condimentum et lectus non mattis.</p>
+<p>Le site est principalement noir et blanc mais change de couleur en fonction des pages explorées et/ou menus. il y a toujours un duo de deux couleurs très claires. </p>
 </div>
-  <img src="https://placeholdit.imgix.net/~text?txtsize=75&txt=800%C3%97400&w=800&h=400"/>
+  <img src="article3loco.png"/>
   </div>
   </body>
 </html>
