--- a/javascript/formulaire/motdepasse.html
+++ b/javascript/formulaire/motdepasse.html
@@ -10,7 +10,7 @@
     <div class="motdepassebox">
       <h3>Mot de passe oublié ?</h3>
       <h4>Veuillez entrer votre Email :</h4>
-        <input id="emailoublie" type="text" placeholder="Email ou Identifiant...">
+        <input id="emailoublie" type="text" placeholder="Email ou Identifiant..." value="toto@gmail.com">
         <button onclick="popup()">Envoyer</button>
     </div>
     <script>
