correction console log dans moyenne

--- a/javascript/moyenne.html
+++ b/javascript/moyenne.html
@@ -14,10 +14,12 @@
         console.log(note);
       }
       for (var i = 0; i < note.length; i++){
-      sum += parseInt(note[i]) / 10;
-      console.log('Your sum is ' + sum);
-  }
+        sum += parseInt(note[i]) / 10;
+
+      }
+      console.log('Votre moyenne est' +""+ sum);
     }
+
 
     moyenne();
     </script>
