--- a/javascript/moyenne.html
+++ b/javascript/moyenne.html
@@ -17,7 +17,7 @@
         sum += parseInt(note[i]) / 10;
 
       }
-      console.log('Votre moyenne est' +""+ sum);
+      console.log('Votre moyenne est de'+ " " + sum);
     }
 
 
