Java exo object

--- a/javascript/tableaukata.html
+++ b/javascript/tableaukata.html
@@ -17,7 +17,7 @@
 
         console.log('prenom avec premiere lettre en majuscule ' + firstLetterMaj(prenom)); //Paul
 
-        //var users = ["joe", "lea", "bob", "ann"];
+        var users = ["joe", "lea", "bob", "ann"];
 
         // TODO : ajouter une majuscule à tous les prenoms de la liste
         function UsersMaj() {
@@ -111,6 +111,7 @@
                     return somme;
                 }
                 calculSomme(notes);
+
                 function calculMoyenne(tableauDeNotes) {
                     var moyenne;
                     moyenne = somme / notes.length;
