--- a/javascript/august_2016/memo/memo.html
+++ b/javascript/august_2016/memo/memo.html
@@ -13,41 +13,9 @@
             <div id="title">
                 <h1>Le Memo</h1>
             </div>
-            <div class="card" id="blueCard" onclick="flipCard(this, 'blue')">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-            <div class="card" id="yellowCard" onclick="flipCard(this, 'yellow')">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
+            <div id="memoCard">
 
-            <div class="card" id="redCard" onclick="flipCard(this, 'red')">
-                <div class="front"></div>
-                <div class="back"></div>
             </div>
-            <div class="card" id="greenCard" onclick="flipCard(this, 'green')">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-            <div class="card" id="redCard" onclick="flipCard(this, 'red')">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-            <div class="card" id="greenCard" onclick="flipCard(this, 'green')">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-
-            <div class="card" id="yellowCard" onclick="flipCard(this, 'yellow')">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-            <div class="card" id="blueCard" onclick="flipCard(this, 'blue')">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
         <h3 id="finalResult">Il vous reste: <span id="timer">20</span>s</h3>
     </div>
     <script>
@@ -60,7 +28,24 @@
         var etat = 0;
         var stockRightAnswer = [];
         var resetOneCardTimer;
+        var colorCard = ["blue", "blue", "yellow", "yellow", "green", "green", "red", "red"];
+        function createCard(){
+          var cardBox = document.querySelector("#memoCard");
+          console.log(cardBox);
+          var chooseColor = Math.floor(Math.random() * colorCard.length);
+          var colorChosen = colorCard[chooseColor];
+          colorCard.map(function(colorCard) {
+            var divCard = document.createElement('div');
+            divCard.setAttribute('class', "card");
+            // var frontCard = document.createElement('div');
+            // frontCard.setAttribute('class', "front");
+            // var backCard = document.createElement('div');
+            // frontCard.setAttribute('class', "back");
+            divCard.appendChild(cardBox);
 
+        })
+        }
+        createCard();
         function flipCard(element, color) { // au clique retourne la carte;
             timerStatus = true;
             etat++;
